--- a/index.html
+++ b/index.html
@@ -13,72 +13,69 @@
 </head>
 
 <body>
-    <div>
-        <!--NAV BAR -->
-        <nav class="navbar navbar-light bg-light sticky-top flex-wrap2 flex-md-nowrap p-2">
-            <ul class="navbar-nav navbar-expand-md pl-2 pr-3">
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto text-nowrap">
-
-                        <li class="list-inline-item ml-2 align-middle">
-                            <a class="navbar-brand" href="index.html">
-                                <!--pinterest logo-->
-                                <i class="fa fa-pinterest fa-2x"></i>
-                            </a>
-                        </li>
-                        <li class="nav-item my-1 active">
-                            <a href="#" class="nav-link btn">Home</a>
-                        </li>
-                        <li class="nav-item my-1 active">
-                            <a href="#" class="nav-link btn">Today</a>
-                        </li>
-                        <li class="nav-item my-1 active">
-                            <a href="#" class="nav-link btn">Following</a>
-                        </li>
-                    </ul>
-                </div>
-            </ul>
-
-            <!-- SEARCH BAR-->
-            <div class="input-group py-1 px-2 px-md-0"> 
-                    <input class="form-control form-control-dark" type="text" placeholder="Search" aria-label="Search">
+    <!--NAV BAR -->
+    <nav class="navbar navbar-light bg-light sticky-top flex-wrap2 flex-md-nowrap p-2">
+        <ul class="navbar-nav navbar-expand-lg pl-2 pr-3">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto text-nowrap">
+                    <li class="list-inline-item ml-2 align-middle">
+                        <a class="navbar-brand" href="index.html">
+                            <!--pinterest logo-->
+                            <i class="fa fa-pinterest fa-2x"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item my-1 active">
+                        <a href="#" class="nav-link btn">Home</a>
+                    </li>
+                    <li class="nav-item my-1 active">
+                        <a href="#" class="nav-link btn">Today</a>
+                    </li>
+                    <li class="nav-item my-1 active">
+                        <a href="#" class="nav-link btn">Following</a>
+                    </li>
+                </ul>
             </div>
+        </ul>
+
+        <!-- SEARCH BAR-->
+        <div class="input-group py-1 px-2 px-md-0"> 
+                <input class="form-control form-control-dark" type="text" placeholder="Search" aria-label="Search">
+        </div>
 
 
-            <!-- PROFILE -->
-           <ul class="navbar-nav navbar-expand-md pl-2 pr-3">
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto text-nowrap">
-                        <!--NOTIFICATIONS-->
-                        <li class="list-inline-item ml-2 align-middle">
-                            <a href="#" class="link-menu">
-                                <i class="fa fa-bell fa-2x"></i>
-                            </a>
-                        </li>
+        <!-- PROFILE -->
+        <ul class="navbar-nav navbar-expand-md pl-2 pr-3">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav mr-auto text-nowrap">
+                    <!--NOTIFICATIONS-->
+                    <li class="list-inline-item ml-2 align-middle">
+                        <a href="#" class="link-menu">
+                            <i class="fa fa-bell fa-2x"></i>
+                        </a>
+                    </li>
 
-                        <!--MESSAGES-->
-                        <li class="list-inline-item ml-2 align-middle">
-                            <a href="#" class="link-menu">
-                                <i class="fa fa-comment-dots fa-2x"></i>
-                            </a>
-                        </li>
+                    <!--MESSAGES-->
+                    <li class="list-inline-item ml-2 align-middle">
+                        <a href="#" class="link-menu">
+                            <i class="fa fa-comment-dots fa-2x"></i>
+                        </a>
+                    </li>
 
-                        <!--USER ICON-->
-                        <li class="list-inline-item ml-2 align-middle">
-                            <a href="#" class="link-menu">
-                                <i class="fa fa-user-circle fa-2x"></i>
-                            </a>
-                        </li>
-                        <li class="list-inline-item ml-2 align-middle">
-                            <a href="#" class="link-menu">
-                                <i class="fa fa-angle-down fa-2x"></i>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-            </ul>
-        </nav>
-    </div>
+                    <!--USER ICON-->
+                    <li class="list-inline-item ml-2 align-middle">
+                        <a href="#" class="link-menu">
+                            <i class="fa fa-user-circle fa-2x"></i>
+                        </a>
+                    </li>
+                    <li class="list-inline-item ml-2 align-middle">
+                        <a href="#" class="link-menu">
+                            <i class="fa fa-angle-down fa-2x"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </ul>
+    </nav>
  <!-- SCRIPT FOR FONT AWESOME -->
  <script src="https://kit.fontawesome.com/2cf12949d8.js" crossorigin="anonymous"></script>
 </body>
