--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
         </div>
     </div>
 
+
+
     <!-- CRUMBS -->
     <div class="crumbs d-flex">
         <div class="mr-auto p-2">
@@ -109,14 +111,49 @@
         </div>
     </div>
 
-
-
-
-
-
-
+    <!-- PINS & BOARDS -->
     <div class="container">
         <div class="row">
+            <div class="col-xs-8 col-sm-4 col-md-3 item">
+              <div class="thumbnail">
+                  <img src="./images/project1.png" class="img-fluid" alt="Project1">
+                <div class="caption">
+                  <h3>Project 1: Single Page</h3>
+                  <p>12 pins</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-xs-8 col-sm-4 col-md-3 item">
+                <div class="thumbnail">
+                    <img src="./images/project2.png" class="img-fluid" alt="Project2">
+                  <div class="caption">
+                    <h3>Project 2: Tip Calculator</h3>
+                    <p>2 pins</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-xs-8 col-sm-4 col-md-3 item">
+                <div class="thumbnail">
+                    <img src="./images/project3.png" class="img-fluid" alt="Project3">
+                  <div class="caption">
+                    <h3>Project 3: AP Macro Calc</h3>
+                    <p>4 pins</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-xs-8 col-sm-4 col-md-3 item">
+                <div class="thumbnail">
+                    <img src="./images/project4.png" class="img-fluid" alt="Project4">
+                  <div class="caption">
+                    <h3>Project 4: Safety First</h3>
+                    <p>13 pins</p>
+                  </div>
+                </div>
+              </div>
+
           <div class="col-xs-8 col-sm-4 col-md-3 item">
             <div class="thumbnail">
                 <img src="./images/star1.jpg" class="img-fluid" alt="Star1">
