--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
           <div class="col-xs-8 col-sm-4 col-md-3 item">
             <div class="thumbnail">
-                 <img src="./images/star5.jpg" class="img-fluid" alt="Star5">
+                <img src="./images/book1.jpg" class="img-fluid" alt="Book1">
               <div class="caption">
                 <h3>Thumbnail label</h3>
               </div>
@@ -201,7 +201,7 @@
 
           <div class="col-xs-8 col-sm-4 col-md-3 item">
             <div class="thumbnail">
-                <img src="./images/star6.jpg" class="img-fluid" alt="Star6">
+                <img src="./images/book2.jpg" class="img-fluid" alt="Book2">
               <div class="caption">
                 <h3>Thumbnail label</h3>
               </div>
@@ -210,7 +210,7 @@
             
           <div class="col-xs-8 col-sm-4 col-md-3 item">
             <div class="thumbnail">
-                <img src="./images/star7.jpg" class="img-fluid" alt="Star7">
+                <img src="./images/book3.jpg" class="img-fluid" alt="Book3">
               <div class="caption">
                 <h3>Thumbnail label</h3>
               </div>
@@ -219,10 +219,9 @@
         
           <div class="col-xs-8 col-sm-4 col-md-3 item">
             <div class="thumbnail">
-                <img src="./images/star8.jpg" class="img-fluid" alt="Star8">
+                <img src="./images/book4.jpg" class="img-fluid" alt="Book4">
               <div class="caption">
                 <h3>Thumbnail label</h3>
-
               </div>
             </div>
           </div>
