Fixed spelling typos

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
               <div class="thumbnail">
                   <img src="./images/visit3.jpg" class="img-fluid" alt="Visit3">
                 <div class="caption">
-                  <h3>Seuld, South Korea</h3>
+                  <h3>Seoul, South Korea</h3>
                 </div>
               </div>
             </div>
